--- a/index.html
+++ b/index.html
@@ -95,7 +95,10 @@
             
             <button onclick="calc()">Résultat</button>
 
+            <button onclick="impression()">Impression</button>
+
     </div>
 
 </body>
+
 </html>
