--- a/index.html
+++ b/index.html
@@ -95,10 +95,11 @@
             
             <button onclick="calc()">Résultat</button>
 
-            <button onclick="impression()">Impression</button>
+            <button onclick="imp()">Impression</button>
 
     </div>
 
 </body>
 
 </html>
+
