--- a/index.html
+++ b/index.html
@@ -95,11 +95,12 @@
             
             <button onclick="calc()">Résultat</button>
 
-            <button onclick="imp()">Impression</button>
+            <button onclick="window.print();">Impression</button>
 
     </div>
 
 </body>
 
 </html>
+
 
